# NeneIcecream

./: CMakeLists.txt  README.md  test.cpp
cmake/: NeneIcecreamConfig.cmake.in
include/NeneIcecream/: NeneIcecream.hpp
tests/: CMakeLists.txt  sandbox.cpp  test.cpp
